[package]
name = "browser-container"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
chromiumoxide = "0.8.0"
futures = "0.3.31"
port_check = "0.3.0"
serde = "1.0.228"
serde_json = "1.0.149"
sysinfo = "0.37.2"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
