[package]
name = "browser-container"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"]}
axum-extra = { version = "0.12.3", features = ["typed-header"] }
chromiumoxide = "0.8.0"
flume = "0.12.0"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
port_check = "0.3.0"
sysinfo = "0.37.2"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tungstenite = "0.28.0"
uuid = { version = "1.19.0", features = ["v4"] }
